WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102872
Fix the MIPS build after
r135330
https://bugs.webkit.org/show_bug.cgi?id=102872
Summary
Fix the MIPS build after r135330
Csaba Osztrogonác
Reported
2012-11-20 21:43:44 PST
In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfBranchPtrWithPatchOnRegister(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146: error: 'startOfBranchPtrWithPatchOnRegister' is not a member of 'JSC::MacroAssembler' /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatchOnAddress(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:151: error: 'startOfPatchableBranchPtrWithPatchOnAddress' is not a member of 'JSC::MacroAssembler' In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::MIPSRegisters::RegisterID, void*)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:164: error: 'revertJumpReplacementToBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' make[3]: *** [obj/release/bytecode/CallLinkInfo.o] Error 1 make[3]: *** Waiting for unfinished jobs.... In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:47: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfBranchPtrWithPatchOnRegister(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146: error: 'startOfBranchPtrWithPatchOnRegister' is not a member of 'JSC::MacroAssembler' /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatchOnAddress(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:151: error: 'startOfPatchableBranchPtrWithPatchOnAddress' is not a member of 'JSC::MacroAssembler' In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:47: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::MIPSRegisters::RegisterID, void*)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:164: error: 'revertJumpReplacementToBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' make[3]: *** [obj/release/bytecode/CodeBlock.o] Error 1
Attachments
proposed patch
(3.67 KB, patch)
2012-11-22 06:52 PST
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
proposed patch
(3.48 KB, patch)
2012-11-22 07:03 PST
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2012-11-21 01:02:19 PST
To implement the 'startOfBranchPtrWithPatchOnRegister' and 'revertJumpReplacementToBranchPtrWithPatch' methods a "MIPS mage" is required. Sadly my MIPS-foo is too weak
Balazs Kilvady
Comment 2
2012-11-21 01:09:32 PST
(In reply to
comment #1
)
> To implement the 'startOfBranchPtrWithPatchOnRegister' and 'revertJumpReplacementToBranchPtrWithPatch' methods a "MIPS mage" is required. Sadly my MIPS-foo is too weak
Work in progress…
Balazs Kilvady
Comment 3
2012-11-22 06:52:07 PST
Created
attachment 175669
[details]
proposed patch
Balazs Kilvady
Comment 4
2012-11-22 07:03:24 PST
Created
attachment 175670
[details]
proposed patch
WebKit Review Bot
Comment 5
2012-11-22 20:55:26 PST
Comment on
attachment 175670
[details]
proposed patch Clearing flags on attachment: 175670 Committed
r135555
: <
http://trac.webkit.org/changeset/135555
>
WebKit Review Bot
Comment 6
2012-11-22 20:55:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug