Fix the MIPS build after r135330 https://bugs.webkit.org/show_bug.cgi?id=102872

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2012-11-22
Reviewed by Gavin Barraclough.

Revert/replace functions added to MIPS port.

* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::revertJumpToMove):
(MIPSAssembler):
(JSC::MIPSAssembler::replaceWithJump):
* assembler/MacroAssemblerMIPS.h:
(MacroAssemblerMIPS):
(JSC::MacroAssemblerMIPS::startOfBranchPtrWithPatchOnRegister):
(JSC::MacroAssemblerMIPS::revertJumpReplacementToBranchPtrWithPatch):
(JSC::MacroAssemblerMIPS::startOfPatchableBranchPtrWithPatchOnAddress):

Canonical link: https://commits.webkit.org/121216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135555 268f45cc-cd09-0410-ab3c-d52691b4dbfc